==> piodabro/EthernetENC/src/utility/Enc28J60Network.cpp <==
#include "Enc28J60Network.h"
#include "main.h"
#include "spi.h"
#include "millis.h"
#include "delay.h"
#include "enc28j60.h"
#include "uip.h"
#define CSACTIVE HAL_GPIO_WritePin(ETH_CS_GPIO_Port, ETH_CS_Pin, GPIO_PIN_RESET)
#define CSPASSIVE HAL_GPIO_WritePin(ETH_CS_GPIO_Port, ETH_CS_Pin, GPIO_PIN_SET)

uint8_t Enc28J60Network::readByte(uint16_t addr) {
    writeRegPair(ERDPTL, addr);

    CSACTIVE;

    // issue read command
    uint8_t c;
    uint8_t command = ENC28J60_READ_BUF_MEM;
    HAL_SPI_Transmit(&hspi1, &command, 1, 100);
    HAL_SPI_Receive(&hspi1, &c, 1, 100);

    CSPASSIVE;

    return c;
}

void Enc28J60Network::writeByte(uint16_t addr, uint8_t data) {
    writeRegPair(EWRPTL, addr);

    CSACTIVE;
    // issue write command
    uint8_t command = ENC28J60_WRITE_BUF_MEM;
    HAL_SPI_Transmit(&hspi1, &command, 1, 100);
    HAL_SPI_Transmit(&hspi1, &data, 1, 100);

    CSPASSIVE;
}

uint8_t Enc28J60Network::readOp(uint8_t op, uint8_t address) {
    CSACTIVE;
    // issue read command
    uint8_t command = op | (address & ADDR_MASK);
    uint8_t result = 0;
    HAL_SPI_Transmit(&hspi1, &command, 1, 100);
    if (address & 0x80) {
        // do dummy read if needed (for mac and mii, see datasheet page 29)
        HAL_SPI_Receive(&hspi1, &result, 1, 100);
    }
    HAL_SPI_Receive(&hspi1, &result, 1, 100);
    CSPASSIVE;
    return result;
}

void Enc28J60Network::writeOp(uint8_t op, uint8_t address, uint8_t data) {
    CSACTIVE;
    // issue write command
    uint8_t command = op | (address & ADDR_MASK);
    HAL_SPI_Transmit(&hspi1, &command, 1, 100);
    HAL_SPI_Transmit(&hspi1, &data, 1, 100);

    CSPASSIVE;
}

void Enc28J60Network::readBuffer(uint16_t len, uint8_t *data) {
    CSACTIVE;
    // issue read command
    uint8_t command = ENC28J60_READ_BUF_MEM;
    HAL_SPI_Transmit(&hspi1, &command, 1, 100);
    HAL_SPI_Receive(&hspi1, data, len, 1000);
    data += len;

    CSPASSIVE;
}

void Enc28J60Network::writeBuffer(uint16_t len, uint8_t *data) {
    CSACTIVE;
    // issue write command
    uint8_t command = ENC28J60_WRITE_BUF_MEM;
    HAL_SPI_Transmit(&hspi1, &command, 1, 100);
    HAL_SPI_Transmit(&hspi1, data, len, 1000);
    data += len;

    CSPASSIVE;
}

uint16_t Enc28J60Network::chksum(uint16_t sum, memhandle handle, memaddress pos, uint16_t len) {
    uint16_t t;
    len = setReadPtr(handle, pos, len) - 1;

    CSACTIVE;
    // issue read command
    uint8_t command = ENC28J60_READ_BUF_MEM;
    HAL_SPI_Transmit(&hspi1, &command, 1, 100);

    uint16_t i;
    for (i = 0; i < len; i += 2) {
        // read data
        uint8_t part = 0;

        HAL_SPI_Receive(&hspi1, &part, 1, 100);
        t = part << 8;

        HAL_SPI_Receive(&hspi1, &part, 1, 100);
        t += part;

        sum += t;
        if (sum < t) {
            sum++; /* carry */
        }
    }
    if (i == len) {
        uint8_t last;
        HAL_SPI_Receive(&hspi1, (uint8_t*) &last, 1, 100);
        t = (last << 8) + 0;

        sum += t;
        if (sum < t) {
            sum++; /* carry */
        }
    }
    CSPASSIVE;

    /* Return sum in host byte order. */
    return sum;
}
