==> abhinnkp/SNMP_ESP12E_V1.0/lib/EthernetENC/src/utility/Enc28J60Network.cpp <==
#include "Enc28J60Network.h"
#include <Arduino.h>
#include <SPI.h>
#include "enc28j60.h"
#include "uip.h"
#define CSACTIVE do { digitalWrite(csPin, LOW); delayMicroseconds(1); } while (0)
#define CSPASSIVE do { delayMicroseconds(1); digitalWrite(csPin, HIGH); } while (0)
#define SPI_ETHERNET_SETTINGS SPISettings(1000000, MSBFIRST, SPI_MODE0)

uint8_t Enc28J60Network::readByte(uint16_t addr)
{
  writeRegPair(ERDPTL, addr);

  CSACTIVE;
  // issue read command
  SPI.transfer(ENC28J60_READ_BUF_MEM);
  // read data
  uint8_t c = SPI.transfer(0x00);
  CSPASSIVE;
  return c;
}

void Enc28J60Network::writeByte(uint16_t addr, uint8_t data)
{
  writeRegPair(EWRPTL, addr);

  CSACTIVE;
  // issue write command
  SPI.transfer(ENC28J60_WRITE_BUF_MEM);
  // write data
  SPI.transfer(data);
  CSPASSIVE;
}

uint8_t
Enc28J60Network::readOp(uint8_t op, uint8_t address)
{
  CSACTIVE;
  // issue read command
  SPI.transfer(op | (address & ADDR_MASK));
  // read data
  if(address & 0x80)
    {
    // do dummy read if needed (for mac and mii, see datasheet page 29)
    SPI.transfer(0x00);
    }
  uint8_t c = SPI.transfer(0x00);
  CSPASSIVE;
  return c;
}

void
Enc28J60Network::writeOp(uint8_t op, uint8_t address, uint8_t data)
{
  CSACTIVE;
  // issue write command
  SPI.transfer(op | (address & ADDR_MASK));
  // write data
  SPI.transfer(data);
  CSPASSIVE;
}

void
Enc28J60Network::readBuffer(uint16_t len, uint8_t* data)
{
  CSACTIVE;
  // issue read command
  SPI.transfer(ENC28J60_READ_BUF_MEM);
  while(len)
  {
    len--;
    // read data
    *data = SPI.transfer(0x00);
    data++;
  }
  //*data='\0';
  CSPASSIVE;
}

void
Enc28J60Network::writeBuffer(uint16_t len, uint8_t* data)
{
  CSACTIVE;
  // issue write command
  SPI.transfer(ENC28J60_WRITE_BUF_MEM);
  while(len)
  {
    len--;
    // write data
    SPI.transfer(*data);
    data++;
  }
  CSPASSIVE;
}

uint16_t
Enc28J60Network::chksum(uint16_t sum, memhandle handle, memaddress pos, uint16_t len)
{
  uint16_t t;
  SPI.beginTransaction(SPI_ETHERNET_SETTINGS);
  len = setReadPtr(handle, pos, len);
  if (!len) { SPI.endTransaction(); return sum; }
  --len;
  CSACTIVE;
  // issue read command
  SPI.transfer(ENC28J60_READ_BUF_MEM);
  uint16_t i;
  for (i = 0; i < len; i+=2)
  {
    // read data
    t = SPI.transfer(0x00) << 8;
    t += SPI.transfer(0x00);
    sum += t;
    if(sum < t) {
      sum++;            /* carry */
    }
  }
  if(i == len) {
    t = (SPI.transfer(0x00) << 8) + 0;
    sum += t;
    if(sum < t) {
      sum++;            /* carry */
    }
  }
  CSPASSIVE;
  SPI.endTransaction();

  /* Return sum in host byte order. */
  return sum;
}
